# QuickstartFlaskApi

./: .env.example  Dockerfile  README.md  autoapp.py  docker-compose.yml  pyproject.toml
app/: app.py  commands.py  settings.py
app/schemas/: __init__.py
shell_scripts/: run.sh
tests/: conftest.py  factories.py  settings.py  test_database.py
