[tool.poetry]
name = "flaskapi"
version = "0.1.0"
description = ""
authors = ["Pius Dan Nyongesa <pinyonge@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
pydantic = "^1.9.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
environs = "^9.5.0"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
pep8-naming = "^0.12.1"
WebTest = "^3.0.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
